Fixes the footer height on Firefox.

--- a/noripyt/static/scss/_variables.scss
+++ b/noripyt/static/scss/_variables.scss
@@ -39,4 +39,4 @@ $well-primary-bg: $brand-primary;
 $well-primary-border: darken($well-primary-bg, 7%);
 $well-primary-color: white;
 $hr-thickness: 2px;
-$footer-height: 317px;
+$footer-height: 321px;
